增加导航栏，增加footer，增加主体颜色

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,21 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
-<div class="navbar">
+<app-navbar></app-navbar>
+<div class="center-bg">
   <div class="container">
-    <div class="navbar-header">
-    <a class="navbar-brand" href="#">Cheyy小镇</a>
-  </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">首页</a></li>
-      <li><a href="#">产品</a></li>
-      <li><a href="#">关于</a></li>
-    </ul>
+    <div class="row">
+      <div class="col-md-9">
+        <div class="row">
+          <app-carousel></app-carousel>
+        </div>
+        <div class="row">
+          <app-content></app-content>
+        </div>
+      </div>
+      <div class="col-md-3">
+
+      </div>
+
+    </div>
   </div>
 </div>
+<app-footer></app-footer>
