--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,14 @@
-<p>
-  footer works!
-</p>
+<hr>
+<footer class="footer-block">
+  <div class="container">
+
+
+    <div class="row">
+      <div class="col-lg-12">
+        <span class="by-name col-lg-4 text-center">Developed By YunYI Che</span>
+        <span class="by-info col-lg-4 text-center">@2015-2017 www.icheyy.top</span>
+      </div>
+    </div>
+
+  </div>
+</footer>
