--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,3 +1,28 @@
-<p>
-  carousel works!
-</p>
+<div class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li class="active"></li>
+    <li></li>
+    <li></li>
+  </ol>
+
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="../../assets/地质仪器.jpg" alt="" class="slide-image">
+    </div>
+    <div class="item">
+      <img src="../../assets/追求卓越.png" alt="" class="slide-image">
+    </div>
+    <div class="item">
+      <img src="../../assets/智慧社区.png" alt="" class="slide-image">
+    </div>
+  </div>
+
+<a href="javascript:$('.carousel').carousel('prev')" class="left carousel-control">
+  <span class="glyphicon glyphicon-chevron-left"></span>
+</a>
+<a href="javascript:$('.carousel').carousel('next')" class="right carousel-control">
+    <span class="glyphicon glyphicon-chevron-right"></span>    
+</a>
+
+
+</div>
