--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,20 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">首页</a></li>
-        <li><a href="#">产品</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">展示 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">单片机</a></li>
+            <li><a href="#">电路设计</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Android</a></li>
+            <li><a href="#">WebRTC</a></li>
+            <li><a href="#">ionic</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">web前端开发</a></li>
+            <li><a href="#">web后端开发</a></li>        
+          </ul>
+        </li>
         <li><a href="#">关于</a></li>
       </ul>
     </div>
