--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -7,13 +7,13 @@
 
   <div class="carousel-inner">
     <div class="item active">
-      <img src="../../assets/地质仪器.jpg" alt="" class="slide-image">
+      <img src ="../../assets/img_instrument.jpg" alt="" class="slide-image">
     </div>
     <div class="item">
-      <img src="../../assets/追求卓越.png" alt="" class="slide-image">
+      <img src ="../../assets/img_shanghai.png" alt="" class="slide-image">
     </div>
     <div class="item">
-      <img src="../../assets/智慧社区.png" alt="" class="slide-image">
+      <img src ="../../assets/img_smart_community.png" alt="" class="slide-image">
     </div>
   </div>
 
