增加热门文章和标签

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
 <app-carousel></app-carousel>
+
 <div class="center-bg">
   <div class="container">
+      <app-motto-card></app-motto-card>
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-8">
         <div class="row">
           <app-content></app-content>
         </div>
       </div>
-      <div class="col-md-3">
-
+      <div class="col-md-4">
+          
+          <app-hot-article></app-hot-article>
+          <app-hot-lable></app-hot-lable>
       </div>
 
     </div>
