--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,7 @@
 .navbar-default {
     background-color: #0c328c;
     border-color: #3760a7;
+    font-size: 20px;
   }
   .navbar-default .navbar-brand {
     color: #fef8fc;
