--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 
 .center-bg {
-    background-color: #125798;
+    /* background-color: #125798; */
     height: 1200px;
     padding-top: 30px;
 }
