增加文章卡，修改布局，增加ngFor逻辑，增加input属性

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,18 @@
 
 <div class="center-bg">
   <div class="container">
-      <app-motto-card></app-motto-card>
+
     <div class="row">
       <div class="col-md-8">
-        <div class="row">
-          <app-content></app-content>
-        </div>
+        <app-motto-card></app-motto-card>
+
+        <app-article-list></app-article-list>
+
       </div>
       <div class="col-md-4">
-          
-          <app-hot-article></app-hot-article>
-          <app-hot-lable></app-hot-lable>
+
+        <app-hot-article></app-hot-article>
+        <app-hot-lable></app-hot-lable>
       </div>
 
     </div>
