--- a/src/app/motto-card/motto-card.component.html
+++ b/src/app/motto-card/motto-card.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron bg-info">
+<div class="jumbotron">
   <h2>《我的前半生》</h2>
   <p>生活从来不给我从容准备的时间，我不知道下一个路口等待我的会是什么。但是我必须走过去，不能停留，不能思考，不能留恋，我怕自己会犯错……</p>
 </div>
