--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,20 +1,13 @@
 <div class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li class="active"></li>
-    <li></li>
-    <li></li>
+    <li *ngFor="let page of pages" [class.active]="page.active"></li>
   </ol>
 
   <div class="carousel-inner">
-    <div class="item active">
-      <img src ="../../assets/img_instrument.jpg" alt="" class="slide-image">
+    <div class="item" *ngFor="let page of pages" [class.active]="page.active">
+      <img [src] ="page.url" alt="" class="slide-image">
     </div>
-    <div class="item">
-      <img src ="../../assets/img_shanghai.png" alt="" class="slide-image">
-    </div>
-    <div class="item">
-      <img src ="../../assets/img_smart_community.png" alt="" class="slide-image">
-    </div>
+    
   </div>
 
 <a href="javascript:$('.carousel').carousel('prev')" class="left carousel-control">
