--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@ body {
     padding-top: 50px;
     /* background-color: #0c328c!important; */
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial,"Hiragino Sans GB","冬青黑","Microsoft YaHei","微软雅黑",SimSun,"宋体",Helvetica,Tahoma,Arial sans-serif;
+}
