增加文章详情页，错误页面，路由等内容

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
-<app-carousel></app-carousel>
+
 
 <div class="center-bg">
-  <div class="container">
-
-    <div class="row">
-      <div class="col-md-8">
-        <app-motto-card></app-motto-card>
-
-        <app-article-list></app-article-list>
-
-      </div>
-      <div class="col-md-4">
-
-        <app-hot-article></app-hot-article>
-        <app-hot-lable></app-hot-lable>
-      </div>
-
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
+
+
 <app-footer></app-footer>
