--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,23 +16,26 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">首页</a></li>
-        <li class="dropdown">
+        <li [ngClass]="{'active': activeState==='home'}"><a routerLink="/" (click)="onClick('home')">首页</a></li>
+        <li class="dropdown" [ngClass]="{'active': activeState==='dropdown'}" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">展示 <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">单片机</a></li>
-            <li><a href="#">电路设计</a></li>
+            <li><a href="#" (click)="onClick('dropdown')">单片机</a></li>
+            <li><a href="#" (click)="onClick('dropdown')">电路设计</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Android</a></li>
-            <li><a href="#">WebRTC</a></li>
-            <li><a href="#">ionic</a></li>
+            <li><a href="#" (click)="onClick('dropdown')">Android</a></li>
+            <li><a href="#" (click)="onClick('dropdown')">WebRTC</a></li>
+            <li><a href="#" (click)="onClick('dropdown')">ionic</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">web前端开发</a></li>
-            <li><a href="#">web后端开发</a></li>        
+            <li><a href="#" (click)="onClick('dropdown')">web前端开发</a></li>
+            <li><a href="#" (click)="onClick('dropdown')">web后端开发</a></li>        
           </ul>
         </li>
-        <li><a href="#">关于</a></li>
+        <li [ngClass]="{'active': activeState==='about'}"><a routerLink="/about"  (click)="onClick('about')">关于</a></li>
       </ul>
+      <a href="" class="navbar-right register">注册</a>
+      <a href="" class="navbar-right login">登录</a>
+
     </div>
 
   </div>
