增加登录注册页面

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,11 +33,10 @@
         </li>
         <li [ngClass]="{'active': activeState==='about'}"><a routerLink="/about"  (click)="onClick('about')">关于</a></li>
       </ul>
-      <a href="" class="navbar-right register">注册</a>
-      <a href="" class="navbar-right login">登录</a>
+      <a href="#" [routerLink]="['/enter', 'register']" class="navbar-right register">注册</a>
+      <a href="#" [routerLink]="['/enter', 'login']" class="navbar-right login">登录</a>
 
     </div>
-
   </div>
 
 </nav>
