--- a/src/app/register-and-login/register-and-login.component.html
+++ b/src/app/register-and-login/register-and-login.component.html
@@ -1,6 +1,6 @@
 <div class="container center-block">
   <div class="contant">
-    <div class="row text-center">
+    <div class="title row text-center">
 
       <a href="#" [routerLink]="['./register']">注册</a>
       <span>·</span>
