--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,19 +1,19 @@
 <div>
-  <div class="input-group">
+  <div class="input-group col-sm-6 col-sm-offset-3">
     <span class="input-group-addon" id="sizing-addon2">用户名：</span>
     <input type="text" class="form-control" placeholder="至少4个字符" aria-describedby="sizing-addon2">
   </div>
-  <div class="input-group">
+  <div class="input-group col-sm-6 col-sm-offset-3">
     <span class="input-group-addon" id="sizing-addon2">邮箱：</span>
     <input type="text" class="form-control" placeholder="请填真实是邮箱" aria-describedby="sizing-addon2">
   </div>
-  <div class="input-group">
+  <div class="input-group col-sm-6 col-sm-offset-3">
     <span class="input-group-addon" id="sizing-addon2">密码：</span>
-    <input type="text" class="form-control" placeholder="至少6个字符" aria-describedby="sizing-addon2">
+    <input type="password" class="form-control" placeholder="至少6个字符" aria-describedby="sizing-addon2">
   </div>
-  <div class="input-group">
+  <div class="input-group col-sm-6 col-sm-offset-3">
     <span class="input-group-addon" id="sizing-addon2">确认密码：</span>
-    <input type="text" class="form-control" placeholder="请再次输入密码" aria-describedby="sizing-addon2">
+    <input type="password" class="form-control" placeholder="请再次输入密码" aria-describedby="sizing-addon2">
   </div>
   <button type="button" class="btn btn-primary">注册</button>
 </div>
