--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,10 @@
 .btn {
     display: inline-block;
     width: 40%;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.input-group {
+    margin-top: 20px;
 }
