--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div>
-  <div class="input-group">
+  <div class="input-group col-sm-6 col-sm-offset-3">
     <span class="input-group-addon" id="sizing-addon2">账号：</span>
     <input type="text" class="form-control" placeholder="用户名/邮箱" aria-describedby="sizing-addon2">
   </div>
 
-  <div class="input-group">
+  <div class="input-group col-sm-6 col-sm-offset-3">
     <span class="input-group-addon" id="sizing-addon2">密码：</span>
     <input type="password" class="form-control" placeholder="请输入密码" aria-describedby="sizing-addon2">
   </div>
