--- a/src/app/register-and-login/register-and-login.component.css
+++ b/src/app/register-and-login/register-and-login.component.css
@@ -1,10 +1,19 @@
-
+.container {
+    height: 500px;
+    width: 50%;
+}
 .contant{
-    margin: 20px;
+    margin: 40px;
     text-align: center;
     border: 1px solid #ddd;
     border-radius: 5px;
 
+
+}
+
+.title {
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 a {
