--- a/src/app/article-detail/article-detail.component.html
+++ b/src/app/article-detail/article-detail.component.html
@@ -31,6 +31,9 @@
       <p>反范式的设计可以加快某些类型的查询，但是同时可能使另一些类型的查询变慢。比如添加计数表和汇总表是一种很好的优化查询方式， 但这些表的维护成本可能会很高。MySQL 独特的特性和实现细节对性能的影响也很大。</p>
     </div>
 
+    <app-comment></app-comment>
+    <app-comment-list></app-comment-list>
+
   </div>
 
 
