--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,2 +1,2 @@
-<span *ngFor="let star of stars" class="glyphicon glyphicon-star" [class.glyphicon-star-empty]="star" aria-hidden="true"></span>
+<span *ngFor="let star of stars let i = index;" class="glyphicon glyphicon-star" [class.glyphicon-star-empty]="star" (click)="onSelect(i)" aria-hidden="true"></span>
 
