--- a/src/app/article/comment/comment.component.html
+++ b/src/app/article/comment/comment.component.html
@@ -37,7 +37,7 @@
     <div class="col-sm-11">
       <div class="row">
         <a href="#">{{item.observer}}</a>
-        <app-stars [starNum]="stars"></app-stars>
+        <app-stars [starNum]="item.stars"></app-stars>
       </div>
       <div class="row">
         <p>#{{item.commentId}} · 评论于 {{item.time | date:'yyyy-MM-dd HH:mm:ss'}}</p>
