--- a/src/app/enter/login/login.component.html
+++ b/src/app/enter/login/login.component.html
@@ -1,13 +1,13 @@
 <div>
   <div class="input-group col-sm-6 col-sm-offset-3">
-    <span class="input-group-addon" id="sizing-addon2">账号：</span>
+    <span class="input-group-addon" id="sizing-addon2">账&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</span>
     <input type="text" class="form-control" placeholder="用户名/邮箱" aria-describedby="sizing-addon2">
   </div>
 
   <div class="input-group col-sm-6 col-sm-offset-3">
-    <span class="input-group-addon" id="sizing-addon2">密码：</span>
+    <span class="input-group-addon" id="sizing-addon2">密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：</span>
     <input type="password" class="form-control" placeholder="请输入密码" aria-describedby="sizing-addon2">
   </div>
 
-  <button type="button" class="btn btn-primary">登录</button>
+  <button type="button" class="btn btn-primary">登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</button>
 </div>
