--- a/src/app/enter/register/register.component.html
+++ b/src/app/enter/register/register.component.html
@@ -1,14 +1,14 @@
 <div>
   <div class="input-group col-sm-6 col-sm-offset-3">
-    <span class="input-group-addon" id="sizing-addon2">用户名：</span>
+    <span class="input-group-addon" id="sizing-addon2">账&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</span>
     <input type="text" class="form-control" placeholder="至少4个字符" aria-describedby="sizing-addon2">
   </div>
   <div class="input-group col-sm-6 col-sm-offset-3">
-    <span class="input-group-addon" id="sizing-addon2">邮箱：</span>
+    <span class="input-group-addon" id="sizing-addon2">邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：</span>
     <input type="text" class="form-control" placeholder="请填真实是邮箱" aria-describedby="sizing-addon2">
   </div>
   <div class="input-group col-sm-6 col-sm-offset-3">
-    <span class="input-group-addon" id="sizing-addon2">密码：</span>
+    <span class="input-group-addon" id="sizing-addon2">密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：</span>
     <input type="password" class="form-control" placeholder="至少6个字符" aria-describedby="sizing-addon2">
   </div>
   <div class="input-group col-sm-6 col-sm-offset-3">
