增加富文本 增加代码高亮 修改登录表单为响应式表单

--- a/src/app/article/comment/comment.component.html
+++ b/src/app/article/comment/comment.component.html
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="col-sm-1 author_img">
     <img class="author-small-img" src="../../../favicon.ico" alt="">
@@ -50,3 +51,8 @@
     <p>{{item.content}}</p>
   </div>
 </div>
+
+
+<div id="editorElem" style="text-align:left"></div>
+
+<pre><code class="c">int a = 5; while(true) &#123; i++; break; &#125;</code></pre>
