解决部署到网站上刷新404问题 修改注册响应式表单 增加校验器

--- a/src/app/enter/login/login.component.html
+++ b/src/app/enter/login/login.component.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+    <button type="submit" class="btn btn-primary" [disabled]="!formModel.valid">登&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</button>
 </form>
 
 
