--- a/src/app/enter/register/register.component.html
+++ b/src/app/enter/register/register.component.html
@@ -1,28 +1,51 @@
 <form [formGroup]="formModel" (submit)="onSubmit()" novalidate>
 
-    <div class="input-group col-sm-6 col-sm-offset-3">
-        <span class="input-group-addon">账&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</span>
-        <input type="text" class="form-control" formControlName="username" placeholder="至少4个字符"
-               aria-describedby="sizing-addon2">
+    <div class="text-input row">
+        <div class="col-sm-offset-3 col-sm-6">
+            <div class="input-group">
+                <span class="input-group-addon">账&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</span>
+                <input type="text" class="form-control" formControlName="username" placeholder="至少4个字符">
+            </div>
+        </div>
+
+        <div class="message col-sm-3">{{isUsrenameValid}}</div>
     </div>
 
-    <div class="input-group col-sm-6 col-sm-offset-3">
-        <span class="input-group-addon">邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：</span>
-        <input type="text" class="form-control" formControlName="email" placeholder="请填真实是邮箱"
-               aria-describedby="sizing-addon2">
+
+    <div class="text-input row">
+        <div class="col-sm-offset-3 col-sm-6">
+            <div class="input-group">
+                <span class="input-group-addon">邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：</span>
+                <input type="text" class="form-control" formControlName="email" placeholder="请填真实是邮箱">
+            </div>
+        </div>
+
+        <div class="message col-sm-3">{{isEmailValid}}</div>
+
     </div>
 
     <div formGroupName="passwordsGroup">
-        <div class="input-group col-sm-6 col-sm-offset-3">
-            <span class="input-group-addon">密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：</span>
-            <input type="password" class="form-control" formControlName="password" placeholder="至少6个字符"
-                   aria-describedby="sizing-addon2">
+        <div class="text-input row">
+            <div class="col-sm-offset-3 col-sm-6">
+                <div class="input-group">
+                    <span class="input-group-addon">密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：</span>
+                    <input type="password" class="form-control" formControlName="password" placeholder="至少6个字符">
+                </div>
+            </div>
+
+            <div class="message col-sm-3">{{isPasswordValid}}</div>
         </div>
-        <div class="input-group col-sm-6 col-sm-offset-3">
-            <span class="input-group-addon">确认密码：</span>
-            <input type="password" class="form-control" formControlName="pconfirm" placeholder="请再次输入密码"
-                   aria-describedby="sizing-addon2">
+        <div class="text-input row">
+            <div class="col-sm-offset-3 col-sm-6">
+                <div class="input-group">
+                    <span class="input-group-addon">确认密码：</span>
+                    <input type="password" class="form-control" formControlName="pconfirm" placeholder="请再次输入密码">
+                </div>
+            </div>
+
+            <div class="message col-sm-3">{{pconfirm}}</div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">注册</button>
+
+    <button type="submit" class="btn btn-primary" [disabled]="!formModel.valid" >注册</button>
 </form>
