增加热门文章、热门标签、单个文章请求接口实现

--- a/src/app/card/hot-article/hot-article.component.html
+++ b/src/app/card/hot-article/hot-article.component.html
@@ -4,11 +4,7 @@
   </div>
   <div class="panel-body">
     <ul>
-      <li><a>•&nbsp;&nbsp;&nbsp;&nbsp;关于我的一些看法</a></li>
-      <li><a>•&nbsp;&nbsp;&nbsp;&nbsp;关于我的一些看法</a></li>
-      <li><a>•&nbsp;&nbsp;&nbsp;&nbsp;关于我的一些看法</a></li>
-      <li><a>•&nbsp;&nbsp;&nbsp;&nbsp;关于我的一些看法</a></li>
-      <li><a>•&nbsp;&nbsp;&nbsp;&nbsp;关于我的一些看法</a></li>
+      <li *ngFor="let article of articleList"><a>•&nbsp;&nbsp;&nbsp;&nbsp;{{article.title}}</a></li>
     </ul>
   </div>
 </div>
