--- a/src/app/article/article-detail/article-detail.component.html
+++ b/src/app/article/article-detail/article-detail.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div *ngIf="article!=null" class="container">
   <div class="col-md-8">
-    <h3>MySQL—Schema 与数据类型优化{{id}}</h3>
+    <h3>{{article.title}}</h3>
 
     <div class="row">
       <div class="col-md-2 text-center">
@@ -10,25 +10,25 @@
       <div class="author-text-info col-md-6">
         <div class="row">
           <a href="" class="author-label">作者</a>
-          <span id="name">cheyy</span>
+          <span id="name">{{article.user.name}}</span>
         </div>
 
         <div class="row article-message-info">
           <span>创作与</span>
-          <span>11111</span>
+          <span>{{article.created_at}}</span>
           <span>&nbsp;&nbsp;阅读</span>
-          <span>22</span>
+          <span>{{article.view_count}}</span>
           <span>&nbsp;&nbsp;评论</span>
-          <span>23</span>
+          <span>{{article.comments_count}}</span>
           <span>&nbsp;&nbsp;评分</span>
-          <span>5星</span>
+          <span>{{article.id}}星</span>
         </div>
       </div>
     </div>
 
 
     <div class="article-text">
-      <p>反范式的设计可以加快某些类型的查询，但是同时可能使另一些类型的查询变慢。比如添加计数表和汇总表是一种很好的优化查询方式， 但这些表的维护成本可能会很高。MySQL 独特的特性和实现细节对性能的影响也很大。</p>
+      <p>{{article.body}}</p>
     </div>
 
     <app-comment [articleId]="id"></app-comment>
