增加用户登陆注册接口

--- a/src/app/enter/register/register.component.html
+++ b/src/app/enter/register/register.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-offset-3 col-sm-6">
             <div class="input-group">
                 <span class="input-group-addon">账&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</span>
-                <input type="text" class="form-control" formControlName="username" placeholder="至少4个字符">
+                <input type="text" class="form-control" formControlName="username" name='name' placeholder="至少4个字符">
             </div>
         </div>
 
@@ -16,7 +16,7 @@
         <div class="col-sm-offset-3 col-sm-6">
             <div class="input-group">
                 <span class="input-group-addon">邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：</span>
-                <input type="text" class="form-control" formControlName="email" placeholder="请填真实是邮箱">
+                <input type="text" class="form-control" formControlName="email" name='email' placeholder="请填真实是邮箱">
             </div>
         </div>
 
@@ -29,7 +29,7 @@
             <div class="col-sm-offset-3 col-sm-6">
                 <div class="input-group">
                     <span class="input-group-addon">密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码：</span>
-                    <input type="password" class="form-control" formControlName="password" placeholder="至少6个字符">
+                    <input type="password" class="form-control" formControlName="password" name='password' placeholder="至少6个字符">
                 </div>
             </div>
 
@@ -39,7 +39,7 @@
             <div class="col-sm-offset-3 col-sm-6">
                 <div class="input-group">
                     <span class="input-group-addon">确认密码：</span>
-                    <input type="password" class="form-control" formControlName="pconfirm" placeholder="请再次输入密码">
+                    <input type="password" class="form-control" formControlName="pconfirm" name='password_confirmation' placeholder="请再次输入密码">
                 </div>
             </div>
 
