--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -94,6 +94,7 @@
     padding-right: 30px;
     padding-top: 12px;
     color: #fef8fc;
+  font-size: 20px;
     text-decoration:none;
 }
 .register:hover, 
