--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,42 +1,46 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 
-  <div class="container">
+    <div class="container">
 
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Cheyy小镇</a>
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Cheyy小镇</a>
 
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-        aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1"
+                    aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li [ngClass]="{'active': activeState==='home'}"><a routerLink="/" (click)="onClick('home')">首页</a></li>
+                <li class="dropdown" [ngClass]="{'active': activeState==='dropdown'}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">展示 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" (click)="onClick('dropdown')">单片机</a></li>
+                        <li><a href="#" (click)="onClick('dropdown')">电路设计</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#" (click)="onClick('dropdown')">Android</a></li>
+                        <li><a href="#" (click)="onClick('dropdown')">WebRTC</a></li>
+                        <li><a href="#" (click)="onClick('dropdown')">ionic</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#" (click)="onClick('dropdown')">web前端开发</a></li>
+                        <li><a href="#" (click)="onClick('dropdown')">web后端开发</a></li>
+                    </ul>
+                </li>
+                <li [ngClass]="{'active': activeState==='about'}"><a routerLink="/about"
+                                                                     (click)="onClick('about')">关于</a></li>
+            </ul>
+            <a href="#" [routerLink]="['/enter', 'register']" (click)="onClick('')" class="navbar-right register">注册</a>
+            <a href="#" [routerLink]="['/enter', 'login']" (click)="onClick('')" class="navbar-right login">登录</a>
+            <a (click)="onCreateArticle()" class="navbar-right login">写文章</a>
+
+        </div>
     </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li [ngClass]="{'active': activeState==='home'}"><a routerLink="/" (click)="onClick('home')">首页</a></li>
-        <li class="dropdown" [ngClass]="{'active': activeState==='dropdown'}" >
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">展示 <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#" (click)="onClick('dropdown')">单片机</a></li>
-            <li><a href="#" (click)="onClick('dropdown')">电路设计</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#" (click)="onClick('dropdown')">Android</a></li>
-            <li><a href="#" (click)="onClick('dropdown')">WebRTC</a></li>
-            <li><a href="#" (click)="onClick('dropdown')">ionic</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#" (click)="onClick('dropdown')">web前端开发</a></li>
-            <li><a href="#" (click)="onClick('dropdown')">web后端开发</a></li>        
-          </ul>
-        </li>
-        <li [ngClass]="{'active': activeState==='about'}"><a routerLink="/about"  (click)="onClick('about')">关于</a></li>
-      </ul>
-      <a href="#" [routerLink]="['/enter', 'register']" (click)="onClick('')" class="navbar-right register">注册</a>
-      <a href="#" [routerLink]="['/enter', 'login']" (click)="onClick('')" class="navbar-right login">登录</a>
-
-    </div>
-  </div>
 
 </nav>
