--- a/src/app/article/article-card/article-card.component.html
+++ b/src/app/article/article-card/article-card.component.html
@@ -1,6 +1,6 @@
 <a href="#" [routerLink]="['/article', article.id]"><h3>{{article.title}}</h3></a>
 <p class="article-info">由 {{article.user.name}} 发表于 {{article.created_at}}</p>
-<p class="article-content">{{article.body}}</p>
+<div class="article-content" [innerHTML]="article.body"></div>
 
   <span class="label label-info" *ngFor="let tag of article.tags">{{tag.name}}</span>
   <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
