--- a/src/app/article/article-create/article-create.component.html
+++ b/src/app/article/article-create/article-create.component.html
@@ -38,7 +38,7 @@
         <div class="form-group">
             <label for="editorElem" class="col-sm-2 control-label col-sm-offset-2">内&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;容：</label>
             <div class="col-sm-5">
-                <div id="editorElem"><p>请输入内容</p></div>
+                <div id="editorElem" style="text-align:left"><p>请输入内容</p></div>
             </div>
             <div class="message col-sm-3"></div>
         </div>
